syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | error SEMI
    7       | Specifier error
    8       | Specifier error SEMI
    9       | Specifier ExtDecList error
   10       | Specifier FunDec CompSt
   11       | Specifier FunDec error SEMI

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT error RC

   19 OptTag: ID
   20       | /* empty */

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | error RC

   33 StmtList: Stmt StmtList
   34         | /* empty */

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | error SEMI
   42     | Exp error

   43 DefList: Def DefList
   44        | /* empty */

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList error

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp ADD Exp
   56    | Exp SUB Exp
   57    | Exp MUL Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | SUB Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | error RP
   70    | Exp LB error RB
   71    | ADD error

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 7 8 9 11 18 24 27 32 41 42 46 69 70 71
INT (258) 23 67
FLOAT (259) 68
TYPE (260) 14
SEMI (261) 4 5 6 8 11 35 37 41 45
COMMA (262) 13 28 48 72
ID (263) 19 21 22 25 26 27 62 63 65 66
ASSIGNOP (264) 50 51
OR (265) 53
AND (266) 52
RELOP (267) 54
SUB (268) 56 60
ADD (269) 55 71
DIV (270) 58
MUL (271) 57
NOT (272) 61
DOT (273) 65
RC (274) 16 18 31 32
LC (275) 16 31
RB (276) 23 24 64 70
LB (277) 23 64 70
RP (278) 25 26 27 38 39 40 59 62 63 69
LP (279) 25 26 27 38 39 40 59 62 63
LOWER_THAN_ELSE (280)
WHILE (281) 40
ELSE (282) 39
IF (283) 38 39
RETURN (284) 37
STRUCT (285) 16 17 18


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9 10 11, on right: 2
ExtDecList (35)
    on left: 12 13, on right: 4 9 13
Specifier (36)
    on left: 14 15, on right: 4 5 7 8 9 10 11 30 45 46
StructSpecifier (37)
    on left: 16 17 18, on right: 15
OptTag (38)
    on left: 19 20, on right: 16
Tag (39)
    on left: 21, on right: 17
VarDec (40)
    on left: 22 23 24, on right: 12 13 23 30 49 50
FunDec (41)
    on left: 25 26 27, on right: 10 11
VarList (42)
    on left: 28 29, on right: 25 28
ParamDec (43)
    on left: 30, on right: 28 29
CompSt (44)
    on left: 31 32, on right: 10 36
StmtList (45)
    on left: 33 34, on right: 31 33
Stmt (46)
    on left: 35 36 37 38 39 40 41 42, on right: 33 38 39 40
DefList (47)
    on left: 43 44, on right: 16 31 43
Def (48)
    on left: 45 46, on right: 43
DecList (49)
    on left: 47 48, on right: 45 46 48
Dec (50)
    on left: 49 50, on right: 47 48
Exp (51)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71, on right: 35 37 38 39 40 42 50 51 52 53 54 55 56 57 58
    59 60 61 64 65 70 72 73
Args (52)
    on left: 72 73, on right: 62 72


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


state 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag
   18                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    7       | Specifier . error
    8       | Specifier . error SEMI
    9       | Specifier . ExtDecList error
   10       | Specifier . FunDec CompSt
   11       | Specifier . FunDec error SEMI

    error  shift, and go to state 16
    SEMI   shift, and go to state 17
    ID     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


state 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


state 9

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 10

   18 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 22


state 11

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


state 12

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


state 13

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


state 14

    0 $accept: Program $end .

    $default  accept


state 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 16

    7 ExtDef: Specifier error .
    8       | Specifier error . SEMI
   24 VarDec: error . RB

    SEMI  shift, and go to state 24
    RB    shift, and go to state 25

    $default  reduce using rule 7 (ExtDef)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 26

    $default  reduce using rule 22 (VarDec)


state 19

    4 ExtDef: Specifier ExtDecList . SEMI
    9       | Specifier ExtDecList . error

    error  shift, and go to state 27
    SEMI   shift, and go to state 28


state 20

   12 ExtDecList: VarDec .
   13           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 12 (ExtDecList)


state 21

   10 ExtDef: Specifier FunDec . CompSt
   11       | Specifier FunDec . error SEMI

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


state 22

   18 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 18 (StructSpecifier)


state 23

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


state 24

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 25

   24 VarDec: error RB .

    $default  reduce using rule 24 (VarDec)


state 26

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


state 27

    9 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 9 (ExtDef)


state 28

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 29

   13 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


state 30

   23 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


state 31

   11 ExtDef: Specifier FunDec error . SEMI
   32 CompSt: error . RC

    SEMI  shift, and go to state 46
    RC    shift, and go to state 47


state 32

   31 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 36


state 33

   10 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 10 (ExtDef)


state 34

   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


state 35

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


state 36

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 36


state 37

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 54


state 38

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


state 39

   30 ParamDec: Specifier . VarDec

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec  go to state 55


state 40

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


state 41

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 29 (VarList)


state 42

   24 VarDec: error . RB

    RB  shift, and go to state 25


state 43

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


state 44

   13 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


state 45

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


state 46

   11 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 11 (ExtDef)


state 47

   32 CompSt: error RC .

    $default  reduce using rule 32 (CompSt)


state 48

   31 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    ADD     shift, and go to state 64
    NOT     shift, and go to state 65
    LC      shift, and go to state 32
    LP      shift, and go to state 66
    WHILE   shift, and go to state 67
    IF      shift, and go to state 68
    RETURN  shift, and go to state 69

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


state 49

   23 VarDec: VarDec . LB INT RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 30

    $default  reduce using rule 49 (Dec)


state 50

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error

    error  shift, and go to state 75
    SEMI   shift, and go to state 76


state 51

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 47 (DecList)


state 52

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


state 53

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


state 54

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


state 55

   23 VarDec: VarDec . LB INT RB
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 30 (ParamDec)


state 56

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


state 57

   28 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 78
    ParamDec         go to state 41


state 58

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


state 59

   32 CompSt: error . RC
   41 Stmt: error . SEMI
   69 Exp: error . RP

    SEMI  shift, and go to state 79
    RC    shift, and go to state 47
    RP    shift, and go to state 80


state 60

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


state 61

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


state 62

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 66 (Exp)


state 63

   60 Exp: SUB . Exp

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 83


state 64

   71 Exp: ADD . error

    error  shift, and go to state 84


state 65

   61 Exp: NOT . Exp

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 85


state 66

   59 Exp: LP . Exp RP

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 86


state 67

   40 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 87


state 68

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 88


state 69

   37 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 89


state 70

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


state 71

   31 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


state 72

   33 StmtList: Stmt . StmtList

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    ADD     shift, and go to state 64
    NOT     shift, and go to state 65
    LC      shift, and go to state 32
    LP      shift, and go to state 66
    WHILE   shift, and go to state 67
    IF      shift, and go to state 68
    RETURN  shift, and go to state 69

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 91
    Stmt      go to state 72
    Exp       go to state 73


state 73

   35 Stmt: Exp . SEMI
   42     | Exp . error
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . ADD Exp
   56    | Exp . SUB Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    error     shift, and go to state 92
    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    SUB       shift, and go to state 98
    ADD       shift, and go to state 99
    DIV       shift, and go to state 100
    MUL       shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103


state 74

   50 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 104


state 75

   46 Def: Specifier DecList error .

    $default  reduce using rule 46 (Def)


state 76

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


state 77

   48 DecList: Dec COMMA . DecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 105
    Dec      go to state 51


state 78

   28 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 28 (VarList)


state 79

   41 Stmt: error SEMI .

    $default  reduce using rule 41 (Stmt)


state 80

   69 Exp: error RP .

    $default  reduce using rule 69 (Exp)


state 81

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    RP     shift, and go to state 106
    LP     shift, and go to state 66

    Exp   go to state 107
    Args  go to state 108


state 82

   69 Exp: error . RP

    RP  shift, and go to state 80


state 83

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . ADD Exp
   56    | Exp . SUB Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   60    | SUB Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DIV  shift, and go to state 100
    MUL  shift, and go to state 101
    DOT  shift, and go to state 102
    LB   shift, and go to state 103

    $default  reduce using rule 60 (Exp)


state 84

   71 Exp: ADD error .

    $default  reduce using rule 71 (Exp)


state 85

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . ADD Exp
   56    | Exp . SUB Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 102
    LB   shift, and go to state 103

    $default  reduce using rule 61 (Exp)


state 86

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . ADD Exp
   56    | Exp . SUB Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    SUB       shift, and go to state 98
    ADD       shift, and go to state 99
    DIV       shift, and go to state 100
    MUL       shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103
    RP        shift, and go to state 109


state 87

   40 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 110


state 88

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 111


state 89

   37 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . ADD Exp
   56    | Exp . SUB Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    SEMI      shift, and go to state 112
    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    SUB       shift, and go to state 98
    ADD       shift, and go to state 99
    DIV       shift, and go to state 100
    MUL       shift, and go to state 101
    DOT       shift, and go to state 102
    LB        shift, and go to state 103


state 90

   31 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


state 91

   33 StmtList: Stmt StmtList .

    $default  reduce using rule 33 (StmtList)


state 92

   42 Stmt: Exp error .

    $default  reduce using rule 42 (Stmt)


state 93

   35 Stmt: Exp SEMI .

    $default  reduce using rule 35 (Stmt)


state 94

   51 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 113


state 95

   53 Exp: Exp OR . Exp

    error  shift, and go to state 82
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    SUB    shift, and go to state 63
    ADD    shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 114


state 96

   52 Exp: Exp AND . Exp
